--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "gen-github": "rimraf ./tests/github/api && ts-node --files ./src/main.ts -s ./tests/github/swagger.yaml -o ./tests/github/api -t all",
     "gen-filtered-api": "rimraf ./tests/filtered-api/api && ts-node --files ./src/main.ts -s ./tests/filtered-api/swagger.json -o ./tests/filtered-api/api -t DummySelector,Project,NonExistingTag -m",
     "gen-with-all-tags": "rimraf ./tests/with-all-tags/api && ts-node --files ./src/main.ts -s ./tests/with-all-tags/swagger.json -o ./tests/with-all-tags/api -t all",
+    "gen-wam": "rimraf ./tests/wam/api && ts-node --files ./src/main.ts -s ./tests/wam/swagger.json -o ./tests/wam/api -t all -k",
     "release": "npm run tests && npm run build && standard-version --tag-prefix=''",
     "test": "ts-node --files=tsconfig.json node_modules/jasmine/bin/jasmine --config=jasmine.json",
     "intg-tests:gen-all-tags": "rimraf tests/test-angular-project/src/api-all-tags && npm run gen -- src/main.ts -s tests/test-angular-project/swagger.yaml -o tests/test-angular-project/src/api-all-tags -t all",
